examples/test/testpolicy2410.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2410
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key49: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value32
          key44: value42
          key33: value12
      podSelector:
        matchLabels:
          key43: value11
          key45: value8
          key14: value11
